fix(core): nve-dialog does not support text wrapping content

--- a/projects/elements/src/dialog/dialog.css
+++ b/projects/elements/src/dialog/dialog.css
@@ -18,7 +18,6 @@
   max-width: var(--max-width);
   min-height: var(--min-height);
   height: max-content;
-  min-width: max-content;
 }
 
 :host([size='sm']) {
